# click-app

./: AGENTS.md  CLAUDE.md  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
DemoApp/: README.md  pyproject.toml
DemoApp/demo_app/: cli.py
DemoApp/tests/: test_demo_app.py
hooks/: post_gen_project.py
state/: plan.md
tests/: __init__.py  test_full_template.py  test_template.py
{{cookiecutter.app_name}}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
{{cookiecutter.app_name}}/.cursor/rules/: repo.mdc
{{cookiecutter.app_name}}/.github/workflows/: claude.yml  publish.yml  test.yml
{{cookiecutter.app_name}}/tests/: test_{{cookiecutter.package_folder}}.py
{{cookiecutter.app_name}}/{{cookiecutter.package_folder}}/: cli.py
