[project]
name = "{{ cookiecutter.package_name }}"
version = "0.1"
description = "{{ cookiecutter.description or '' }}"
readme = "README.md"
authors = [{name = "{{ cookiecutter.author_name }}"}]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = []
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
{% if cookiecutter.github_username %}
[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}"
Changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}/releases"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}/issues"
CI = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.app_name }}/actions"
{% endif %}
[project.scripts]
{{ cookiecutter.app_name }} = "{{ cookiecutter.package_folder }}.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
